--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^9.0.0",
-    "mongodb": "^5.1.0",
+    "mongodb": "^4.13.0",
     "mongoose": "^6.10.0",
     "morgan": "~1.9.1",
+    "nodemon": "^2.0.22",
     "validator": "^13.9.0"
   }
 }
